--- a/web/blueprints/templates/events_home.html
+++ b/web/blueprints/templates/events_home.html
@@ -5,33 +5,6 @@
     Calcool8tor
 {% endblock %}
 
-{% block navbar %}
-    <div class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button"
-                        class="navbar-toggle"
-                        data-toggle="collapse"
-                        data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand" href="">Calcool8r</a>
-            </div>
-
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sign in</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(form, action=url_for('events.register')) }}
 {% endblock %}
