Catch Index error.

--- a/web/blueprints/templates/events_home.html
+++ b/web/blueprints/templates/events_home.html
@@ -14,6 +14,9 @@
             </ul>
         {% endif %}
     {% endwith %}
-    Event Dashboard
-    Event ID: {{ event_id }}
+
+    <h1>Event Dashboard</h1>
+    <h3>Event ID: {{ event_id }}</h3>
+    <h3>People Attending: 0</h3>
+
 {% endblock %}
