--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -1,47 +1,56 @@
 {% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block scripts %}
-<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '952096844837567',
-      xfbml      : true,
-      version    : 'v2.5'
-    });
+{% block content %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
 
-    FB.getLoginStatus(function(response) {
-      console.log("login status: ", response)
-      if (response.status === 'connected') {
-        console.log('Logged in.');
-        loggedIn(response.authResponse);
-      }
-      else {
-        FB.login();
-      }
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-
-
-   function loggedIn(authResponse) {
-     var avatar = 'https://graph.facebook.com/'+authResponse.userID+'/picture';
-     $('input[name="fb_user_id"]').val(authResponse.userID);
-     $('input[name="fb_user_token"]').val(authResponse.accessToken);
-     $('#avatar').attr('src', avatar);
-   }
-</script>
+    {{ wtf.quick_form(form, action=url_for('events.register')) }}
 {% endblock %}
 
+{% block scripts %}
+    {{ super() }}
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '952096844837567',
+                xfbml      : true,
+                version    : 'v2.5'
+            });
 
-{% block content %}
-    {{ wtf.quick_form(form, action=url_for('events.register')) }}
+            FB.getLoginStatus(function(response) {
+                console.log("login status: ", response)
+                if (response.status === 'connected') {
+                    console.log('Logged in.');
+                    loggedIn(response.authResponse);
+                }
+                else {
+                    FB.login();
+                }
+            });
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+
+        function loggedIn(authResponse) {
+            var avatar = 'https://graph.facebook.com/'+authResponse.userID+'/picture';
+            $('input[name="fb_user_id"]').val(authResponse.userID);
+            $('input[name="fb_user_token"]').val(authResponse.accessToken);
+            $('#avatar').attr('src', avatar);
+        }
+    </script>
 {% endblock %}
