--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -66,7 +66,7 @@
            } else {
              $('#event_name').text(eventResponse.name);
              $('input[name="fb_event_id"]').val(eventResponse.id);
-             $('input[name="event_time"]').text(eventResponse.start_time);
+             $('input[name="event_time"]').val(eventResponse.start_time);
              $('form').prop('disabled', false);
            }
          })
