--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -58,24 +58,42 @@
          $('#avatar').attr('src', avatar);
        }
 
+       function disable() {
+         $('form,[type="submit"]').prop('disabled', true);
+         $('input[name="fb_url"]').prop('disabled', true);
+       }
+
+       function enable() {
+         $('form,[type="submit"]').prop('disabled', false);
+         $('input[name="fb_url"]').prop('disabled', false);
+       }
+
        function fbUrlChanged() {
          var url = $('input[name="fb_url"]').val();
-         var eventID = url.match(/events\/(\d+)/)[1];
+         var eventMatch = url.match(/events\/(\d+)/);
+
+         if (!userAuth || !eventMatch) {
+           $('form,[type="submit"]').prop('disabled', true);
+           return;
+         }
+         
+         var eventID = eventMatch[1];
+
          FB.api('/'+eventID, function (eventResponse) {
            if (eventResponse.error) {
+             console.log("eventResponse ERROR", eventResponse);
            } else {
              $('#event_name').text(eventResponse.name);
              $('input[name="event_name"]').val(eventResponse.name);
              $('input[name="fb_event_id"]').val(eventResponse.id);
              $('input[name="event_time"]').val(eventResponse.start_time);
-             $('form').prop('disabled', false);
+             enable();
            }
          })
        }
 
        function init () {
-         $('form').prop('disabled', true);
-         $('input[name="fb_url"]').prop('disabled', true);
+         disable();
          $('input[name="fb_url"]').on('change blur', fbUrlChanged);
        }
 
