--- a/web/blueprints/templates/choose_chelas.html
+++ b/web/blueprints/templates/choose_chelas.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(form, action=url_for('events.confirm_chelas')) }}
     <button type="submit" name="abstemio">Soy Abstemio</button>
 {% endblock %}
 
