--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -13,7 +13,7 @@
     {% endwith %}
 
     <h3 id="event_name"></h3>
-    <main>
+    <main style="background-image: url('{{ url_for('static', filename='img/partyOn.jpg') }}');">
         ​
         <section>
             <figure>
