--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/activation.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/thankyou.css') }}" type="text/css">
+{% endblock %}
 
 {% block content %}
     {% with messages = get_flashed_messages() %}
@@ -13,21 +18,8 @@
     {% endwith %}
 
     <h3 id="event_name"></h3>
-    <main style="background-image: url('{{ url_for('static', filename='img/partyOn.jpg') }}');">
-        ​
-        <section>
-            <figure>
-                <img src="{{ url_for('/static'), filename='img/logo.png'}}" alt="Chelometro">
-            </figure>
-            <h1>Tú armas la fiesta, nosotros la llevamos.</h1>
-            <p>Despreocupate de las chelas para tu fiesta, el chelometro te sugiere la cantidad ideal
-                con base a la confirmación de tus amigos y te las llevamos bien frías a la dirección
-                de tu evento. ¡Así de fácil!
-            </p>
-            {{ wtf.quick_form(form, action=url_for('events.register')) }}
-        </section>
-        ​
-    </main>
+
+    {{ wtf.quick_form(form, action=url_for('events.register')) }}
 {% endblock %}
 
 {% block scripts %}
