--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -2,8 +2,8 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block styles %}
+    {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/activation.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/thankyou.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
