--- a/web/blueprints/templates/thank_you.html
+++ b/web/blueprints/templates/thank_you.html
@@ -1,6 +1,10 @@
 {% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/thankyou.css') }}" type="text/css">
+{% endblock %}
+
 {% block content %}
     <main>​
         <section>
