--- a/web/blueprints/templates/base.html
+++ b/web/blueprints/templates/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block styles %}
-    {{ super }}
+    {{ super() }}
     <link href="{{ url_for('static', filename='css/screen.css') }}" media="screen, projection" rel="stylesheet" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto' rel='stylesheet' type='text/css'>
 {% endblock %}
