--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
     {{ super() }}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/activation.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/screen.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
