--- a/web/blueprints/templates/thank_you.html
+++ b/web/blueprints/templates/thank_you.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/thankyou.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/screen.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
