--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -4,6 +4,7 @@
 {% block styles %}
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/screen.css') }}" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block content %}
