--- a/web/blueprints/templates/index.html
+++ b/web/blueprints/templates/index.html
@@ -32,5 +32,6 @@
 
 {% block scripts %}
     {{ super() }}
+    <script src="{{url_for('static', filename='js/login.js')}}"></script>
     <script src="{{url_for('static', filename='js/index.js')}}"></script>
 {% endblock %}
