--- a/web/blueprints/templates/event_dashboard.html
+++ b/web/blueprints/templates/event_dashboard.html
@@ -22,4 +22,175 @@
     <h3>People Attending: 0</h3>
     <h1>{{ value }}</h1>
 
+    <main>
+
+        <section>
+            <div class="query">
+                <figure>
+                    <img src="{{url_for('static', filename='img/logo.png')}}" alt="Chelometro">
+                </figure>
+                <h1>Título del Evento</h1>
+                <h1>Hora de inicio: 8:00 PM</h1>
+                <h1>Asistentes del evento: 35 personas</h1>
+                <h1>Personas que van a tomar: 30 personas</h1>
+            </div>
+            <form class="brands" action="">
+                <div class="beer">
+                    <figure class="beer__images">
+                        <img src="../img/modelo.png" alt="Cerveza Modelo">
+                    </figure>
+                    <div>
+                        <p>10<br>Personas les gusta Modelo</p>
+                    </div>
+                </div>
+                <div class="beer">
+                    <figure class="beer__images">
+                        <img src="../img/corona.png" alt="Cerveza Corona">
+                    </figure>
+                    <div>
+                        <p>5<br>Personas les gusta Corona</p>
+                    </div>
+                </div>
+                <div class="beer">
+                    <figure class="beer__images">
+                        <img src="../img/victoria.png" alt="Victoria">
+                    </figure>
+                    <div>
+                        <p>15<br>Personas les gusta Victoria</p>
+                    </div>
+                </div>
+                <div class="slider">
+                    <p>¿Cúantas chelas deseas que te llevemos?</p>
+                    <input class="rangeSlider" type="range" name="chelaslide" min="18" max="2000" step="6" value="18">
+                    <output name="chelaslide">18</output>
+                </div>
+                <div class="submit">
+                    <p>Las cervezas serán entregadas 1 hora antes al domicilio del evento:<br>
+                        Francisco Marquez 125C, Colonia Condesa, Ciudad de México.</p>
+                    <button class="pedir" type="submit">Hacer pedido</button>
+                </div>
+            </form>
+
+        </section>
+    </main>
+
 {% endblock %}
+
+
+<script>
+    (function () {
+
+        var selector = '[data-rangeSlider]',
+                elements = document.querySelectorAll(selector);
+
+        // Example functionality to demonstrate a value feedback
+        function valueOutput(element) {
+            var value = element.value,
+                    output = element.parentNode.getElementsByTagName('output')[0];
+            output.innerHTML = value;
+        }
+
+        for (var i = elements.length - 1; i >= 0; i--) {
+            valueOutput(elements[i]);
+        }
+
+        Array.prototype.slice.call(document.querySelectorAll('input[type="range"]')).forEach(function (el) {
+            el.addEventListener('input', function (e) {
+                valueOutput(e.target);
+            }, false);
+        });
+
+
+        // Example functionality to demonstrate disabled functionality
+        var toggleBtnDisable = document.querySelector('#js-example-disabled button[data-behaviour="toggle"]');
+        toggleBtnDisable.addEventListener('click', function (e) {
+            var inputRange = toggleBtnDisable.parentNode.querySelector('input[type="range"]');
+            console.log(inputRange);
+            if (inputRange.disabled) {
+                inputRange.disabled = false;
+            }
+            else {
+                inputRange.disabled = true;
+            }
+            inputRange.rangeSlider.update();
+        }, false);
+
+        // Example functionality to demonstrate programmatic value changes
+        var changeValBtn = document.querySelector('#js-example-change-value button');
+        changeValBtn.addEventListener('click', function (e) {
+            var inputRange = changeValBtn.parentNode.querySelector('input[type="range"]'),
+                    value = changeValBtn.parentNode.querySelector('input[type="number"]').value;
+
+            inputRange.value = value;
+            inputRange.dispatchEvent(new Event('change'));
+        }, false);
+
+        // Example functionality to demonstrate programmatic buffer set
+        var stBufferBtn = document.querySelector('#js-example-buffer-set button');
+        stBufferBtn.addEventListener('click', function (e) {
+            var inputRange = stBufferBtn.parentNode.querySelector('input[type="range"]'),
+                    value = stBufferBtn.parentNode.querySelector('input[type="number"]').value;
+
+            inputRange.rangeSlider.update({buffer : value});
+        }, false);
+
+        // Example functionality to demonstrate destroy functionality
+        var destroyBtn = document.querySelector('#js-example-destroy button[data-behaviour="destroy"]');
+        destroyBtn.addEventListener('click', function (e) {
+            var inputRange = destroyBtn.parentNode.querySelector('input[type="range"]');
+            console.log(inputRange);
+            inputRange.rangeSlider.destroy();
+        }, false);
+
+        var initBtn = document.querySelector('#js-example-destroy button[data-behaviour="initialize"]');
+
+        initBtn.addEventListener('click', function (e) {
+            var inputRange = initBtn.parentNode.querySelector('input[type="range"]');
+            rangeSlider.create(inputRange, {});
+        }, false);
+
+        //update range
+        var updateBtn1 = document.querySelector('#js-example-update-range button');
+        updateBtn1.addEventListener('click', function (e) {
+            var inputRange = updateBtn1.parentNode.querySelector('input[type="range"]');
+            inputRange.rangeSlider.update({min : 0, max : 20, step : 0.5, value : 1.5, buffer : 70});
+        }, false);
+
+
+        var toggleBtn = document.querySelector('#js-example-hidden button[data-behaviour="toggle"]');
+        toggleBtn.addEventListener('click', function (e) {
+            var container = e.target.previousElementSibling;
+            if (container.style.cssText.match(/display[\s:]{1,3}none/)) {
+                container.style.cssText = '';
+            } else {
+                container.style.cssText = 'display: none;';
+            }
+        }, false);
+
+        // Basic rangeSlider initialization
+        rangeSlider.create(elements, {
+
+            // Callback function
+            onInit: function () {
+            },
+
+            // Callback function
+            onSlideStart: function (value, percent,  position) {
+                console.info('onSlideStart', 'value: ' + value, 'percent: ' + percent, 'position: ' + position);
+            },
+
+            // Callback function
+            onSlide: function (value, percent,  position) {
+                console.log('onSlide', 'value: ' + value, 'percent: ' + percent, 'position: ' + position);
+            },
+
+            // Callback function
+            onSlideEnd: function (value, percent,  position) {
+                console.warn('onSlideEnd', 'value: ' + value, 'percent: ' + percent, 'position: ' + position);
+            }
+        });
+
+    })();
+</script>
+</body>
+</html>
